--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@templ/tsconfig/node.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "@templ/core": ["src/index.ts"]
     }
