--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "@templ/build",
+  "name": "@templ/logger",
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "description": "TEMPL package build",
+  "description": "TEMPL logger service",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/build#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/logger#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "packages/build"
+    "directory": "packages/logger"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
-  "files": [],
-  "bin": {
-    "build-package": "./src/index.ts"
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./*": "./*"
   },
+  "files": [
+    "dist",
+    "*.d.ts"
+  ],
   "scripts": {
     "build": "tsup",
     "clean": "rimraf .turbo dist docs coverage",
@@ -34,6 +44,7 @@
   },
   "devDependencies": {
     "@size-limit/file": "^8.2.6",
+    "@templ/config": "workspace:^",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.0",
@@ -42,26 +53,14 @@
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^8.2.6",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.8",
     "typedoc": "^0.24.8",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.4"
   },
+  "size-limit": [],
   "dependencies": {
-    "@templ/logger": "workspace:^",
-    "@templ/utils": "workspace:^",
-    "esbuild": "^0.19.2",
-    "get-tsconfig": "^4.7.0",
-    "mri": "^1.2.0",
-    "sade": "^1.8.1",
-    "totalist": "^3.0.1",
-    "typescript": "^5.2.2",
-    "zod": "^3.22.2"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10KB"
-    }
-  ]
+    "colorette": "^2.0.20"
+  }
 }
