--- a/scripts/package.json
+++ b/scripts/package.json
@@ -21,15 +21,14 @@
     "create:pkg": "node --loader tsx ./create-pkg.ts",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
-    "lint:md": "node --loader tsx ./lint-md.ts",
-    "third_party:git:update": "node --loader tsx ./third-party-git-update.ts"
+    "lint:md": "node --loader tsx ./lint-md.ts"
   },
   "devDependencies": {
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/lcov-parse": "^1.0.0",
     "del": "^7.1.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "glob": "^10.3.4",
     "isomorphic-git": "^1.24.5",
     "markdownlint": "^0.30.0",
