--- a/packages/logger/turbo.json
+++ b/packages/logger/turbo.json
@@ -1,10 +1,4 @@
 {
   "extends": ["//"],
-  "pipeline": {
-    "build": {
-      "cache": false,
-      "output": ["dist"],
-      "dependsOn": ["@templ/config#build"]
-    }
-  }
+  "pipeline": {}
 }
