--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -48,7 +48,6 @@
     "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.0",
     "@vitest/coverage-v8": "^0.34.4",
-    "deepmerge": "^4.3.1",
     "eslint": "^8.49.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
@@ -57,6 +56,13 @@
     "typedoc": "^0.25.1",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.4"
+  },
+  "dependencies": {
+    "@templ/build": "workspace:^",
+    "bundle-require": "^4.0.1",
+    "joycon": "^3.1.1",
+    "strip-json-comments": "^5.0.1",
+    "zod": "^3.22.2"
   },
   "size-limit": [
     {
