--- a/turbo.json
+++ b/turbo.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "baseBranch": "origin/main"
+  "baseBranch": "origin/main",
+  "pipeline": {
+    "build": {
+      "cache": false,
+      "output": ["dist"]
+    }
+  }
 }
