--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,5 @@
     "editor.formatOnSave": false
   },
   "prettier.enable": false,
-  "json.validate.enable": false,
-  "docwriter.style": "Auto-detect"
+  "json.validate.enable": false
 }
