--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,7 +15,6 @@
   },
   "type": "module",
   "scripts": {
-    "clean": "rimraf .turbo",
     "clean:nm": "node --loader tsx ./clean-nm.ts",
     "coverage:lcov": "node --loader tsx ./coverage-lcov.ts",
     "create:pkg": "node --loader tsx ./create-pkg.ts",
@@ -28,9 +27,10 @@
     "@templ/tsconfig": "workspace:^",
     "@types/lcov-parse": "^1.0.0",
     "del": "^7.1.0",
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "glob": "^10.3.4",
     "isomorphic-git": "^1.24.5",
+    "lcov-parse": "^1.0.0",
     "markdownlint": "^0.30.0",
     "ora": "^7.0.1",
     "rimraf": "^5.0.1",
