--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
     "ms-vscode-remote.remote-containers",
     "foxundermoon.shell-format",
     "folke.vscode-monorepo-workspace",
+    "google.wireit",
     "redhat.vscode-yaml",
     "zixuanchen.vitest-explorer",
     "seatonjiang.gitmoji-vscode",
