--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -28,35 +28,108 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "clean": "rimraf .turbo dist docs coverage",
-    "dev": "tsup ./src/index.ts --watch",
-    "docs:build": "pnpm typedoc",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
-    "size:limit": "size-limit",
-    "test": "vitest run",
-    "test:ci": "CI=true vitest run",
-    "test:watch": "vitest run --watch",
-    "typedoc": "typedoc src/index.ts",
-    "typedoc:preview": "sirv docs"
+    "build": "wireit",
+    "clean": "wireit",
+    "dev": "wireit",
+    "docs:build": "wireit",
+    "docs:preview": "wireit",
+    "lint": "wireit",
+    "size:limit": "wireit",
+    "test": "wireit",
+    "test:watch": "wireit"
   },
   "types": "./dist/index.d.ts",
   "devDependencies": {
     "@size-limit/file": "^8.2.6",
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
-    "@types/node": "^20.5.9",
-    "@vitest/coverage-v8": "^0.34.3",
-    "deepmerge": "^4.3.1",
-    "eslint": "^8.48.0",
+    "@types/node": "^20.6.0",
+    "@vitest/coverage-v8": "^0.34.4",
+    "eslint": "^8.49.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
     "size-limit": "^8.2.6",
     "tsup": "^7.2.0",
     "typedoc": "^0.25.1",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.3"
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.4",
+    "wireit": "^0.13.0"
+  },
+  "wireit": {
+    "build": {
+      "command": "tsup",
+      "files": [
+        "src/**/*.ts",
+        "tsup.config.ts",
+        "tsconfig.json"
+      ],
+      "output": [
+        "dist/**"
+      ],
+      "dependencies": []
+    },
+    "clean": {
+      "command": "rimraf .eslintcache dist docs coverage"
+    },
+    "dev": {
+      "command": "tsx ./src/index.ts --watch",
+      "files": [
+        "src/**/*.ts",
+        "tsconfig.json"
+      ]
+    },
+    "docs:build": {
+      "command": "typedoc src/index.ts",
+      "output": [
+        "docs/**"
+      ],
+      "dependencies": [
+        "build"
+      ]
+    },
+    "docs:preview": {
+      "command": "sirv docs",
+      "files": [
+        "src/**"
+      ],
+      "dependencies": [
+        "docs:build"
+      ]
+    },
+    "lint": {
+      "command": "eslint --color --cache --fix --cache-location .eslintcache .",
+      "files": [
+        "src/**/*.ts",
+        ".eslintignore",
+        ".eslintrc"
+      ]
+    },
+    "size:limit": {
+      "command": "size-limit",
+      "dependencies": [
+        "build"
+      ]
+    },
+    "test": {
+      "command": "vitest run",
+      "files": [
+        "test/**.test.ts",
+        "vitest.config.ts"
+      ],
+      "dependencies": [
+        "build"
+      ]
+    },
+    "test:watch": {
+      "command": "vitest run --watch",
+      "files": [
+        "test/**.test.ts",
+        "vitest.config.ts"
+      ],
+      "dependencies": [
+        "build"
+      ]
+    }
   },
   "size-limit": [
     {
