--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -17,9 +17,7 @@
     "*.js"
   ],
   "scripts": {
-    "clean": "rimraf .turbo",
-    "eslint": "eslint . --config=index.js",
-    "eslint:fix": "eslint . --config=index.js --fix"
+    "lint": "wireit"
   },
   "peerDependencies": {
     "eslint": "^8.47.0",
@@ -27,13 +25,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
@@ -45,8 +43,18 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "^8.48.0",
+    "eslint": "^8.49.0",
     "prettier": "^3.0.3",
-    "rimraf": "^5.0.1"
+    "wireit": "^0.13.0"
+  },
+  "wireit": {
+    "lint": {
+      "command": "eslint --color --cache --fix --cache-location .eslintcache --config=index.js .",
+      "files": [
+        "**/*.js",
+        ".eslintignore",
+        ".eslintrc"
+      ]
+    }
   }
 }
