chore: pr title check skip for dependabot

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,6 +22,7 @@ jobs:
 
   pr-title-check:
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
       - uses: thehanimo/pr-title-checker@v1.4.0
         with:
