--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,19 +15,59 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "scripts": {
-    "clean": "rimraf build",
-    "docs:build": "vitepress build .",
-    "docs:dev": "vitepress dev .",
-    "docs:preview": "vitepress preview .",
-    "typedoc:preview": "node --loader tsx typedoc/preview.ts"
+    "clean": "wireit",
+    "docs:build": "wireit",
+    "docs:dev": "wireit",
+    "docs:preview": "wireit",
+    "typedoc:preview": "wireit"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
     "polka": "^0.5.2",
     "serve-static": "^1.15.0",
     "tempura": "^0.4.0",
-    "tsx": "^3.12.8",
+    "tsx": "^3.12.10",
     "vitepress": "1.0.0-rc.10",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "wireit": "^0.13.0"
+  },
+  "wireit": {
+    "clean": {
+      "command": "rimraf .vitepress .wireit"
+    },
+    "dev": {
+      "command": "tsx ./src/index.ts --watch",
+      "files": [
+        "src/**/*.ts",
+        "tsconfig.json"
+      ]
+    },
+    "docs:build": {
+      "command": "vitepress build .",
+      "output": [
+        "build/**"
+      ]
+    },
+    "docs:dev": {
+      "command": "vitepress dev ."
+    },
+    "docs:preview": {
+      "command": "vitepress preview .",
+      "files": [
+        "*.md"
+      ],
+      "output": [
+        "build/**"
+      ],
+      "dependencies": [
+        "docs:build"
+      ]
+    },
+    "typedoc:preview": {
+      "command": "node --loader tsx typedoc/preview.ts",
+      "files": [
+        "typedoc/**/*.ts"
+      ]
+    }
   }
 }
