--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "scripts": {
     "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm format && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
     "build": "pnpm --filter './packages/**' run build",
-    "docs:build": "pnpm run docs:build",
+    "docs:build": "pnpm -r docs:build",
     "coverage:lcov": "pnpm -C tools/scripts coverage:lcov",
     "clean": "rimraf .pnpm-store coverage && pnpm -r clean",
     "clean:nm": "pnpm -C tools/scripts clean:nm",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C tools/scripts create:pkg",
     "deps:fresh": "taze -r -w -i",
-    "dev": "pnpm --filter './packages/**' dev",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
     "lint": "pnpm --filter './packages/**' lint && pnpm lint:spell && pnpm lint:secret && pnpm lint:md",
@@ -43,7 +42,7 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.3.5",
+    "cspell": "^7.3.6",
     "envinfo": "^7.10.0",
     "husky": "^8.0.3",
     "nano-staged": "^0.8.0",
@@ -51,7 +50,7 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
-    "snyk": "^1.1216.0",
+    "snyk": "^1.1220.0",
     "stylelint": "^15.10.3",
     "taze": "^0.11.2"
   },
