--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -62,7 +62,7 @@
     "sirv-cli": "^2.0.2",
     "size-limit": "^9.0.0",
     "tsup": "^7.2.0",
-    "tsx": "^3.12.8",
+    "tsx": "^3.12.10",
     "typedoc": "^0.25.1",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.4",
@@ -91,7 +91,7 @@
       ]
     },
     "clean": {
-      "command": "rimraf .eslintcache dist docs coverage"
+      "command": "rimraf .eslintcache .wireit dist docs coverage"
     },
     "dev": {
       "command": "tsx ./src/index.ts --watch",
