--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -75,7 +75,7 @@
       ]
     },
     "clean": {
-      "command": "rimraf .eslintcache dist docs coverage"
+      "command": "rimraf .eslintcache .wireit dist docs coverage"
     },
     "dev": {
       "command": "tsx ./src/index.ts --watch",
