chore: dropped prittier formatting separately, ranther now it'll be checked through eslint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm format && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
+    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
     "build": "pnpm --filter './packages/**' run build",
     "docs:build": "pnpm -r docs:build",
     "coverage:lcov": "pnpm -C tools/scripts coverage:lcov",
@@ -17,7 +17,6 @@
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C tools/scripts create:pkg",
     "deps:fresh": "taze -r -w -i",
-    "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
     "lint": "pnpm --filter './packages/**' lint && pnpm lint:spell && pnpm lint:secret && pnpm lint:md",
     "lint:md": "pnpm -C tools/scripts lint:md",
@@ -47,7 +46,6 @@
     "husky": "^8.0.3",
     "nano-staged": "^0.8.0",
     "pnpm": "^8.7.5",
-    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
     "snyk": "^1.1220.0",
