--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -14,7 +14,14 @@
   },
   "main": "./index.js",
   "files": [
-    "*.js"
+    ".eslintignore",
+    ".eslintrc",
+    ".prettierignore",
+    ".prettierrc",
+    "index.js",
+    "javascript.js",
+    "standard.js",
+    "typescript.js"
   ],
   "scripts": {
     "clean": "wireit",
@@ -22,13 +29,14 @@
   },
   "peerDependencies": {
     "eslint": "^8.47.0",
-    "rimraf": "^5.0.1",
     "react": "^18.2.0",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "npm:eslint-plugin-i@2.28.0-2",
