--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size:limit && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
+    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size:generate && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
     "build": "pnpm --filter './packages/**' run build",
     "docs:build": "pnpm -r docs:build",
     "coverage:lcov": "pnpm -C tools/scripts coverage:lcov",
@@ -23,7 +23,9 @@
     "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\"",
     "lint:spell": "cspell .",
     "prepare": "husky install",
-    "size:limit": "pnpm --filter './packages/**' size:limit",
+    "size:data": "pnpm -C tools/scripts size:data",
+    "size:report": "pnpm -C tools/scripts size:report",
+    "size:generate": "pnpm -C tools/scripts size:generate",
     "test": "pnpm --filter './packages/**' test",
     "test:cli": "pnpm --filter './packages/**/cli' test:cli",
     "system:info": "envinfo",
