--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,7 +38,7 @@
     "docs:build": "wireit",
     "docs:preview": "wireit",
     "lint": "wireit",
-    "size:limit": "wireit",
+    "size": "wireit",
     "test": "wireit",
     "test:cli": "wireit",
     "test:watch": "wireit"
@@ -126,7 +126,7 @@
         ".eslintrc"
       ]
     },
-    "size:limit": {
+    "size": {
       "command": "size-limit",
       "dependencies": [
         "build"
