--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     "docs:build": "wireit",
     "docs:preview": "wireit",
     "lint": "wireit",
-    "size:limit": "wireit",
+    "size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
   },
@@ -110,7 +110,7 @@
         ".eslintrc"
       ]
     },
-    "size:limit": {
+    "size": {
       "command": "size-limit",
       "dependencies": [
         "build"
