--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -22,6 +22,7 @@
     "test": "wireit"
   },
   "devDependencies": {
+    "@types/node": "^20.6.2",
     "@vitest/coverage-v8": "^0.34.4",
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.1",
