--- a/tools/scripts/package.json
+++ b/tools/scripts/package.json
@@ -20,16 +20,17 @@
     "create:pkg": "node --loader tsx ./src/create-pkg.ts",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
-    "lint:md": "node --loader tsx ./src/lint-md.ts"
+    "lint:md": "node --loader tsx ./src/lint-md.ts",
+    "size:data": "node --loader tsx ./src/size-data.ts",
+    "size:generate": "node --loader tsx ./src/size-generate.ts",
+    "size:report": "node --loader tsx ./src/size-report.ts"
   },
   "devDependencies": {
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/lcov-parse": "^1.0.0",
-    "del": "^7.1.0",
     "eslint": "^8.49.0",
     "glob": "^10.3.4",
-    "isomorphic-git": "^1.24.5",
     "lcov-parse": "^1.0.0",
     "markdownlint": "^0.30.0",
     "ora": "^7.0.1",
@@ -39,5 +40,15 @@
     "tempura": "^0.4.0",
     "tsx": "^3.12.10",
     "zod": "^3.22.2"
+  },
+  "dependencies": {
+    "fast-glob": "^3.3.1",
+    "markdown-table": "^3.0.3",
+    "pretty-bytes": "^6.1.1",
+    "read-pkg": "^8.1.0",
+    "rollup": "^3.29.2",
+    "terser": "^5.19.4",
+    "totalist": "^3.0.1",
+    "type-fest": "^4.3.1"
   }
 }
