--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
+    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size:generate && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
     "build": "pnpm --filter './packages/**' run build",
     "docs:build": "pnpm -r docs:build",
     "coverage:lcov": "pnpm -C scripts coverage:lcov",
-    "clean": "rimraf .pnpm-store coverage && pnpm -r clean",
+    "clean": "rimraf .pnpm-store coverage temp && pnpm -r clean",
     "clean:nm": "pnpm -C scripts clean:nm",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
@@ -23,9 +23,6 @@
     "lint:secret": "secretlint --secretlintignore .gitignore \"**/*\"",
     "lint:spell": "cspell .",
     "prepare": "husky install",
-    "size": "pnpm --filter './packages/**' run size",
-    "size:data": "pnpm -C scripts size:data",
-    "size:report": "pnpm -C scripts size:report",
     "size:generate": "pnpm -C scripts size:generate",
     "test": "pnpm --filter './packages/**' test",
     "test:cli": "pnpm --filter './packages/**/cli' test:cli",
@@ -51,7 +48,7 @@
     "pnpm": "^8.7.6",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.7",
-    "snyk": "^1.1225.0",
+    "snyk": "^1.1226.0",
     "stylelint": "^15.10.3",
     "taze": "^0.11.2"
   },
