--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,7 +45,7 @@
     "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.3",
-    "@vitest/coverage-v8": "^0.34.4",
+    "@vitest/coverage-v8": "^0.34.5",
     "eslint": "^8.49.0",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
@@ -54,11 +54,12 @@
     "tsx": "^3.12.10",
     "typedoc": "^0.25.1",
     "vite-tsconfig-paths": "^4.2.1",
-    "vitest": "^0.34.4",
+    "vitest": "^0.34.5",
     "wireit": "^0.14.0"
   },
   "dependencies": {
-    "colorette": "^2.0.20"
+    "colorette": "^2.0.20",
+    "escalade": "^3.1.1"
   },
   "wireit": {
     "build": {
