--- a/scripts/package.json
+++ b/scripts/package.json
@@ -15,6 +15,7 @@
   },
   "type": "module",
   "scripts": {
+    "clean": "wireit",
     "clean:nm": "wireit",
     "coverage:lcov": "wireit",
     "create:pkg": "wireit",
@@ -31,13 +32,10 @@
     "@types/lcov-parse": "^1.0.0",
     "@types/node": "^20.6.3",
     "eslint": "^8.49.0",
-    "glob": "^10.3.4",
     "lcov-parse": "^1.0.0",
     "markdownlint": "^0.30.0",
     "ora": "^7.0.1",
     "rimraf": "^5.0.1",
-    "serialize-error": "^11.0.2",
-    "simple-git": "^3.19.1",
     "tempura": "^0.4.0",
     "tsx": "^3.12.10",
     "wireit": "^0.14.0",
@@ -49,13 +47,15 @@
     "fast-glob": "^3.3.1",
     "markdown-table": "^3.0.3",
     "pretty-bytes": "^6.1.1",
-    "read-pkg": "^8.1.0",
     "rollup": "^3.29.2",
-    "terser": "^5.19.4",
+    "terser": "^5.20.0",
     "totalist": "^3.0.1",
     "type-fest": "^4.3.1"
   },
   "wireit": {
+    "clean": {
+      "command": "rimraf .wireit"
+    },
     "clean:nm": {
       "command": "node --loader tsx ./src/clean-nm.ts",
       "files": [
@@ -117,9 +117,9 @@
       ]
     },
     "size:data": {
-      "command": "node --loader tsx ./src/size-data.ts",
+      "command": "node --loader tsx ./src/size/data.ts",
       "files": [
-        "src/size-data.ts"
+        "src/size/data.ts"
       ],
       "dependencies": [
         {
@@ -129,9 +129,9 @@
       ]
     },
     "size:generate": {
-      "command": "node --loader tsx ./src/size-generate.ts",
+      "command": "node --loader tsx ./src/size/generate.ts",
       "files": [
-        "src/size-generate.ts"
+        "src/size/generate.ts"
       ],
       "dependencies": [
         {
@@ -145,9 +145,9 @@
       ]
     },
     "size:report": {
-      "command": "node --loader tsx ./src/size-report.ts",
+      "command": "node --loader tsx ./src/size/report.ts",
       "files": [
-        "src/size-report.ts"
+        "src/size/report.ts"
       ],
       "dependencies": [
         {
