--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@templ/cli",
   "cliname": "TEMPL",
+  "type": "module",
   "version": "0.0.0",
   "description": "TEMPL cli service",
   "license": "MIT",
@@ -13,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
-  "type": "module",
+  "sideEffects": true,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -23,6 +24,7 @@
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "bin": {
     "templ": "templ.mjs"
   },
@@ -37,23 +39,21 @@
     "dev": "wireit",
     "docs:build": "wireit",
     "docs:preview": "wireit",
-    "lint": "wireit",
-    "size": "wireit",
+    "eslint": "wireit",
+    "lint:size": "wireit",
     "test": "wireit",
     "test:cli": "wireit",
     "test:watch": "wireit"
   },
-  "sideEffects": true,
-  "types": "./dist/index.d.ts",
   "dependencies": {
     "@templ/logger": "workspace:^",
     "sade": "^1.8.1",
     "serialize-error": "^11.0.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.2",
     "@size-limit/file": "^9.0.0",
     "@templ/config": "workspace:^",
-    "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.3",
     "@vitest/coverage-v8": "^0.34.5",
@@ -119,15 +119,14 @@
         "docs:build"
       ]
     },
-    "lint": {
+    "eslint": {
       "command": "eslint --color --cache --fix --cache-location .eslintcache .",
       "files": [
         "src/**/*.ts",
-        ".eslintignore",
-        ".eslintrc"
+        "eslint.config.js"
       ]
     },
-    "size": {
+    "lint:size": {
       "command": "size-limit",
       "dependencies": [
         "build"
