--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -14,9 +14,6 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -24,9 +21,12 @@
     },
     "./*": "./*"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "*.d.ts"
+    "*.d.ts",
+    "dist"
   ],
   "scripts": {
     "build": "wireit",
@@ -34,14 +34,19 @@
     "dev": "wireit",
     "docs:build": "wireit",
     "docs:preview": "wireit",
-    "lint": "wireit",
-    "size": "wireit",
+    "eslint": "wireit",
+    "lint:size": "wireit",
     "test": "wireit",
     "test:watch": "wireit"
   },
+  "dependencies": {
+    "colorette": "^2.0.20",
+    "ora": "^7.0.1",
+    "serialize-error": "^11.0.2"
+  },
   "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.2",
     "@size-limit/file": "^8.2.6",
-    "@templ/eslint-config": "workspace:^",
     "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.3",
     "@vitest/coverage-v8": "^0.34.5",
@@ -55,11 +60,6 @@
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.5",
     "wireit": "^0.14.0"
-  },
-  "dependencies": {
-    "colorette": "^2.0.20",
-    "ora": "^7.0.1",
-    "serialize-error": "^11.0.2"
   },
   "wireit": {
     "build": {
@@ -101,15 +101,14 @@
         "docs:build"
       ]
     },
-    "lint": {
+    "eslint": {
       "command": "eslint --color --cache --fix --cache-location .eslintcache .",
       "files": [
         "src/**/*.ts",
-        ".eslintignore",
-        ".eslintrc"
+        "eslint.config.js"
       ]
     },
-    "size": {
+    "lint:size": {
       "command": "size-limit",
       "dependencies": [
         "build"
