--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -2,10 +2,10 @@
   "extends": "@templ/tsconfig/node.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
     "paths": {
       "@templ/logger": ["./src/index.ts"]
-    }
+    },
+    "outDir": "dist"
   },
   "include": ["src"],
   "exclude": ["dist", "*.d.ts"]
