--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -22,8 +22,10 @@
     "test": "wireit"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "1.0.0-beta.2",
     "@types/node": "^20.6.3",
     "@vitest/coverage-v8": "^0.34.5",
+    "eslint": "^8.49.0",
     "rimraf": "^5.0.1",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.5",
