chore: lots of other refactoring

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,3 +1,28 @@
 {
-  "extends": "@templ/tsconfig/node.json"
+  "compilerOptions": {
+    "target": "esnext",
+    "useDefineForClassFields": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "resolveJsonModule": false,
+    "declaration": true,
+    "outDir": "dist",
+    "newLine": "lf",
+    "stripInternal": true,
+    "noEmitOnError": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "pretty": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*.ts"]
 }
