--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,15 +16,12 @@
   },
   "sideEffects": true,
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    },
-    "./*": "./*"
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
     "templ": "templ.mjs"
   },
@@ -54,10 +51,9 @@
     "@antfu/eslint-config": "1.0.0-beta.2",
     "@size-limit/file": "^9.0.0",
     "@templ/config": "workspace:^",
-    "@templ/tsconfig": "workspace:^",
     "@types/node": "^20.6.3",
     "@vitest/coverage-v8": "^0.34.5",
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
     "find-monorepo-root": "^1.0.3",
     "rimraf": "^5.0.1",
     "sirv-cli": "^2.0.2",
