--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "pnpm clean && pnpm deps:fresh && pnpm build && pnpm changelog && pnpm size:generate && pnpm lint && pnpm test && pnpm test:cli && pnpm update:third_party",
+    "all": "pnpm clean && pnpm deps:update && pnpm lint && pnpm changelog && pnpm build:all && pnpm size:generate && pnpm test:all && pnpm update:third_party",
     "build": "pnpm -r build",
-    "docs:build": "pnpm -r docs:build",
+    "build:all": "pnpm build && pnpm build:docs",
+    "build:docs": "pnpm -r build:docs",
     "coverage:lcov": "pnpm -C scripts coverage:lcov",
     "clean": "rimraf .pnpm-store coverage temp && pnpm -r clean",
     "clean:nm": "pnpm -C scripts clean:nm",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
-    "deps:fresh": "taze -r -w -i",
+    "deps:update": "taze -r -w -i",
     "preinstall": "npx only-allow pnpm",
     "lint": "pnpm -r eslint && pnpm lint:size && pnpm lint:spell && pnpm lint:secret && pnpm lint:md",
     "lint:md": "pnpm -C scripts lint:md",
@@ -26,8 +27,8 @@
     "prepare": "husky install",
     "size:generate": "pnpm -C scripts size:generate",
     "test": "pnpm -r test",
+    "test:all": "pnpm test && pnpm test:cli",
     "test:cli": "pnpm -r test:cli",
-    "system:info": "envinfo",
     "update:third_party": "git submodule update --recursive --remote"
   },
   "sideEffects": true,
