--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,7 @@
     "build": "wireit",
     "clean": "wireit",
     "dev": "wireit",
-    "docs:build": "wireit",
+    "build:docs": "wireit",
     "docs:preview": "wireit",
     "eslint": "wireit",
     "lint:size": "wireit",
@@ -81,7 +81,7 @@
         "tsconfig.json"
       ]
     },
-    "docs:build": {
+    "build:docs": {
       "command": "typedoc src/index.ts",
       "output": [
         "docs/**"
@@ -96,7 +96,7 @@
         "src/**"
       ],
       "dependencies": [
-        "docs:build"
+        "build:docs"
       ]
     },
     "eslint": {
