--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -29,7 +29,7 @@
     "build": "wireit",
     "clean": "wireit",
     "dev": "wireit",
-    "docs:build": "wireit",
+    "build:docs": "wireit",
     "docs:preview": "wireit",
     "eslint": "wireit",
     "lint:size": "wireit",
@@ -86,7 +86,7 @@
         "tsconfig.json"
       ]
     },
-    "docs:build": {
+    "build:docs": {
       "command": "typedoc src/index.ts",
       "output": [
         "docs/**"
@@ -101,7 +101,7 @@
         "src/**"
       ],
       "dependencies": [
-        "docs:build"
+        "build:docs"
       ]
     },
     "eslint": {
