--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,19 @@ permissions:
   contents: write
 
 jobs:
+  clean:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+      - name: Install
+        run: pnpm i --no-frozen-lockfile
+      - name: Lint All
+        run: pnpm run clean
+
   lint:
     runs-on: ubuntu-latest
+    needs: ['clean']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -26,6 +37,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: ['clean']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -34,19 +46,20 @@ jobs:
       - name: Build
         run: pnpm run build
 
-  docs_build:
+  build_docs:
     runs-on: ubuntu-latest
+    needs: ['clean']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
         run: pnpm i --no-frozen-lockfile
       - name: Build
-        run: pnpm run docs:build
+        run: pnpm run build:docs
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: ['build']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -67,7 +80,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: build
+    needs: ['build']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -81,6 +94,7 @@ jobs:
   # coverage_report:
   #   needs: test
   #   runs-on: ubuntu-latest
+  #   needs: ['clean', 'test']
   #   steps:
   #   - name: Checkout code
   #     uses: actions/checkout@v3
@@ -104,6 +118,7 @@ jobs:
   snyk:
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
+    needs: ['clean']
     steps:
       - uses: actions/checkout@master
       - uses: ./.github/actions/setup-node
@@ -118,6 +133,7 @@ jobs:
 
   trivy-scan:
     runs-on: ubuntu-latest
+    needs: ['clean']
     steps:
       - name: Checkout code
         uses: actions/checkout@master
