--- a/package.json
+++ b/package.json
@@ -81,6 +81,6 @@
   },
   "packageManager": "pnpm@8.7.6",
   "stackblitz": {
-    "startCommand": "pnpm dev"
+    "startCommand": "pnpm build"
   }
 }
