--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,7 @@ name: Pull request auto assign
 
 on:
   pull_request:
-    types: [opened, ready_for_review, synchronize]
+    types: [opened, reopened, edited, ready_for_review, synchronize]
 
 concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
@@ -99,3 +99,18 @@ jobs:
       #   uses: peter-evans/commit-comment@v2
       #   with:
       #     body: ${{ steps.size-report.outputs.content }}
+
+  trivy-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+      - name: Run Trivy vulnerability scanner in fs mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: "."
+          scan-type: "fs"
+          scan-ref: "."
+          skip-dirs: "third_party"
+          output: "dependency-results.sbom.json"
+          github-pat: ${{ secrets.GITHUB_TOKEN }}
