--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches: [main]
   pull_request:
+    types: [opened, reopened, edited, ready_for_review, synchronize]
 
 concurrency:
   group: ci-${{ github.event.pull_request.number || github.ref }}
@@ -46,7 +47,7 @@ jobs:
 
   build_docs:
     runs-on: ubuntu-latest
-    needs: ['clean']
+    needs: ['build']
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -106,17 +107,3 @@ jobs:
   #       github-token: ${{ secrets.GITHUB_TOKEN }}
   #       working-directory: ./
   #       update-comment: true
-
-  snyk:
-    runs-on: ubuntu-latest
-    if: github.actor != 'dependabot[bot]'
-    needs: ['clean']
-    steps:
-      - uses: actions/checkout@master
-      - uses: ./.github/actions/setup-node
-      - name: Snyk monitor
-        run: |
-          npx snyk auth $SNYK_TOKEN
-          npx snyk monitor --all-projects
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
